--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -16,7 +16,7 @@
     .left {
       flex: 1;
       background: linear-gradient(rgba(39, 11, 96, 0.5), rgba(39, 11, 96, 0.5)),
-        url("https://images.pexels.com/photos/3228727/pexels-photo-3228727.jpeg?auto=compress&cs=tinysrgb&w=1600")
+        url("https://images.fastcompany.com/image/upload/f_auto,c_fit,w_3840,q_auto/wp-cms/uploads/2023/10/p-1-90970286-courtroom-design.jpg")
           center;
       background-size: cover;
       padding: 50px;
@@ -26,8 +26,8 @@
       color: white;
 
       h1 {
-        font-size: 100px;
-        line-height: 100px;
+        font-size: 50px;
+        line-height: 50px;
       }
       
       p {
