--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -17,7 +17,7 @@
     .left {
       flex: 1;
       background: linear-gradient(rgba(39, 11, 96, 0.5), rgba(39, 11, 96, 0.5)),
-        url("https://images.pexels.com/photos/4881619/pexels-photo-4881619.jpeg?auto=compress&cs=tinysrgb&w=1600")
+        url("https://static.vecteezy.com/system/resources/previews/028/575/685/large_2x/judge-hammer-in-the-court-room-wooden-gavel-as-a-symbol-of-justice-generated-ai-photo.jpg")
           center;
       background-size: cover;
       padding: 50px;
@@ -27,12 +27,12 @@
       color: white;
 
       h1 {
-        font-size: 100px;
-        line-height: 100px;
+        font-size: 50px;
+        line-height: 50px;
+        color: rgb(189, 150, 150);
       }
       
-      p {
-      }
+    
 
       span {
         font-size: 14px;
@@ -58,7 +58,7 @@
       justify-content: center;
 
       h1 {
-      color: #555;
+      color: #413e3e;
       }
       
       form {
@@ -76,7 +76,7 @@
           width: 50%;
           padding: 10px;
           border: none;
-          background-color: #938eef;
+          background-color: #ef8e91;
           color: white;
           font-weight: bold;
           cursor: pointer;
